Finition, enlèvement du .env dans gitignore
